--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,16 @@
 
     <groupId>com.eakay</groupId>
     <artifactId>onebean.boot.stater</artifactId>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>2.0.0.RELEASE</version>
     <packaging>pom</packaging>
     
     <name>eakay-boot-stater</name>
     <description>框架公共依赖</description>
     <properties>
         <java.version>1.8</java.version>
-        <child.model.version>1.0.0.RELEASE</child.model.version>
+        <child.model.version>1.0.0.SNAPSHOT</child.model.version>
         <api.rest.version>1.0.0.SNAPSHOT</api.rest.version>
-        <core.version>1.0.0.SNAPSHOT</core.version>
-        <net.onebean.aliyun.oss.version>1.1.0.7.RELEASE</net.onebean.aliyun.oss.version>
-        <net.onebean.aliyun.sms.version>1.1.0.4.RELEASE</net.onebean.aliyun.sms.version>
-        <net.onebean.aliyun.redis.version>1.1.0.4.RELEASE</net.onebean.aliyun.redis.version>
-        <net.onebean.aliyun.mongo.version>1.1.0.4.RELEASE</net.onebean.aliyun.mongo.version>
-        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+        <core.version>2.0.0.RELEASE</core.version>
     </properties>
 
     <parent>
@@ -130,34 +125,37 @@
                 </repository>
             </distributionManagement>
         </profile>
-    </profiles>
 
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <compilerArguments>
-                            <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
-                        </compilerArguments>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-        <distributionManagement>
-            <repository>
-                <id>releases</id>
-                <name>Nexus Release Repository</name>
-                <url>http://ek-nexus.eakay.cn/nexus/content/repositories/releases/</url>
-            </repository>
-            <snapshotRepository>
-                <id>snapshots</id>
-                <name>Nexus Snapshot Repository</name>
-                <url>http://ek-nexus.eakay.cn/nexus/content/repositories/snapshots/</url>
-            </snapshotRepository>
-        </distributionManagement>
+        <profile>
+            <id>snapshot</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
+                            <compilerArguments>
+                                <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
+                            </compilerArguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <repository>
+                    <id>releases</id>
+                    <name>Nexus Release Repository</name>
+                    <url>http://ek-nexus.eakay.cn/nexus/content/repositories/releases/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>snapshots</id>
+                    <name>Nexus Snapshot Repository</name>
+                    <url>http://ek-nexus.eakay.cn/nexus/content/repositories/snapshots/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 
 </project>
