--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>eakay-boot-stater</name>
+    <name>onebean-boot-stater</name>
     <description>框架公共依赖</description>
     <properties>
         <java.version>1.8</java.version>
@@ -17,6 +17,8 @@
         <api.rest.version>1.0.0-SNAPSHOT</api.rest.version>
         <core.version>1.0.0-SNAPSHOT</core.version>
         <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+        <repo.snapshots.url>https://nexus.onebean.net:8089/repository/maven-snapshots/</repo.snapshots.url>
+        <repo.releases.url>https://nexus.onebean.net:8089/repository/maven-releases/</repo.releases.url>
     </properties>
 
     <parent>
@@ -145,14 +147,12 @@
     </build>
     <distributionManagement>
         <repository>
-            <id>repo-private</id>
-            <name>Nexus Release Repository</name>
-            <url>http://nexus.onebean.net:8082/repository/maven-releases/</url>
+            <id>repo-nexus</id>
+            <url>${repo.releases.url}</url>
         </repository>
         <snapshotRepository>
-            <id>repo-private</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://nexus.onebean.net:8082/repository/maven-snapshots/</url>
+            <id>repo-nexus</id>
+            <url>${repo.snapshots.url}</url>
         </snapshotRepository>
     </distributionManagement>
 
